kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: tp6-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: petclinic
          image: ghcr.io/1223812789/spring-petclinic:4.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
