kubernetes/deployment_withprobes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: tp6-k8s
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: petclinic
          image: ghcr.io/1223812789/spring-petclinic:4.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /tp6/actuator/health
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /tp6/actuator/health/liveness
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /tp6/actuator/health/readiness
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
