kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: tp6-k8s
spec:
  selector:
    app: petclinic
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
