kubernetes/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: tp6-k8s
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /tp6
            pathType: Prefix
            backend:
              service:
                name: petclinic-service
                port:
                  number: 8080
